# code-palace

./: .gitignore  LICENSE  README.md  phase1.html  phase2.html  product-vision.md  pyproject.toml
.claude/: convention-log.md  convention-review.md  style-guide.md
docs/: understanding-foreign-keys.html
palace/: __init__.py
palace/cli/: main.py
palace/core/: config.py  exceptions.py  logging.py  models.py  palace.py  resolve.py
palace/graph/: __init__.py  builder.py  clustering.py  impact.py  layers.py  patterns.py  planner.py  traversal.py
palace/llm/: __init__.py  anthropic.py  availability.py  base.py  explainer.py  ollama.py  onboarder.py  openai.py  planner.py
palace/mcp/: __init__.py  protocol.py  server.py
palace/parsing/: engine.py
palace/semantic/: __init__.py  embeddings.py  model_manager.py  search.py
palace/storage/: duckdb_store.py  store.py  vector_store.py
palace/temporal/: __init__.py  churn.py  cochange.py  history.py  ownership.py
tests/: conftest.py
tests/fakes/: __init__.py  fake_llm.py
tests/integration/: test_deps_command.py  test_diff_command.py  test_explore_tui.py  test_full_pipeline.py  test_init.py  test_init_phase2.py  test_phase2_commands.py  test_plan_command.py  test_symbols_command.py
tests/unit/: test_batch_operations.py  test_churn.py  test_cli_wiring.py  test_clustering.py  test_cochange.py  test_cpp_extractor.py  test_duckdb_store.py  test_embeddings.py  test_exceptions.py  test_git_history.py  test_go_extractor.py  test_impact.py  test_java_extractor.py  test_llm_anthropic.py  test_llm_availability.py  test_llm_base.py  test_llm_explainer.py  test_llm_ollama.py  test_llm_onboarder.py  test_llm_openai.py  test_llm_planner.py  test_logging.py  test_mcp_server.py  test_mcp_tools.py  test_model_manager.py  test_ownership.py  test_parsing_engine.py  test_patterns.py  (+5 more)
(+50 files in other folders)
