[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-palace"
version = "0.1.0"
description = "Navigate any codebase like you built it."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Sandip Patel" }]
keywords = ["codebase", "analysis", "tree-sitter", "graph", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.15,<1.0",
    "rich>=13.0",
    "duckdb>=1.1,<2.0",
    "tree-sitter>=0.23,<1.0",
    "tree-sitter-language-pack>=0.6",
    "networkx>=3.0",
    "lancedb>=0.20",
    "onnxruntime>=1.18",
    "tokenizers>=0.19",
    "textual>=1.0",
    "httpx>=0.27,<1.0",
    "mcp>=1.2,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
    "mypy>=1.10",
    "textual-dev>=1.0",
]
llm = [
    "anthropic>=0.39,<1.0",
    "openai>=1.50,<2.0",
]

[project.scripts]
palace = "palace.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["palace"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
